# pm2s

./: main.py  pyproject.toml
pm2s/: pm2s.py
pm2s/features/: beat.py  hand_part.py  key_signature.py  quantisation.py  time_signature.py
pm2s/io/: midi_read.py  midi_write.py
