[project]
name = "pm2s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.3.0",
    "matplotlib>=3.10.3",
    "mido>=1.3.3",
    "mir-eval>=0.8.2",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "pretty-midi>=0.2.10",
    "torch>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
